	(w3m-form-input-select): Ditto.
	(w3m-form-submit): Ditto.
	(w3m-form-real-reset): Follow the structure change.
	(w3m-form-input-select-id): New buffer local variable.
	(w3m-form-input-select-set): Use it.
	(w3m-form-field-parse): New inline function.
	(w3m-form-parse-and-fontify): Put id for selectinfo.
	(w3m-form-resume): Fixed regexp.
	(w3m-form-input-textarea): Fixed line number.

2003-09-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-retrieve): Redisplay Emacs frame;
	rename from `w3m-retrieve-favicon'.
	(w3m-favicon-image): Rename from `w3m-current-favicon-image'.
	(w3m-favicon-setup): Rename from `w3m-setup-favicon'.
	(w3m-favicon-image-of): Rename from `w3m-buffer-favicon'.
	(w3m-favicon-convert): Rename from `w3m-convert-favicon'.
	(w3m-favicon-retrieve): Rename from `w3m-retrieve-favicon'.

	* w3m-e21.el (w3m-tab-line): Rename `w3m-buffer-favicon' with
	`w3m-favicon-image-of'.

	* w3m.el (w3m-clean-hook-options): Rename `w3m-setup-favicon' with
	`w3m-favicon-setup'.
	(w3m-buffer-setup): Rename `w3m-current-favicon-image' with
	`w3m-favicon-image'.

2003-09-23  OHASHI Akira  <bg66@koka-in.org>

	* w3m.el (w3m-process-connection-type): Set nil when system-type
	is darwin.

2003-09-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el: Bind `w3m-icon-data' when compiling.
	(w3m-current-favicon-data): Abolish.
	(w3m-favicon-converted): Abolish.
	(w3m-favicon-cache-data): Contain image data.
	(w3m-favicon-cache-favicon): Return an image instead of raw data.
	(w3m-setup-favicon): Fix the condition to check whether Emacs
	can display images; set the value of `w3m-current-favicon-image'
	instead of `w3m-current-favicon-data' for the about: pages.
	(w3m-buffer-favicon): Make it simply get the value of
	`w3m-current-favicon-image'.
	(w3m-convert-favicon): Accept raw data and type; simply return an
	image.
	(w3m-retrieve-favicon): Rearrange the arguments to accept url and
	type independently; set the value of `w3m-current-favicon-image'